--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,11 @@
-sudo: false
-language: node_js
-
-cache:
-  directories:
-    - node_modules
-
-branches:
-  only:
-    - master
-
-notifications:
-  email:
-    on_failure: change
-
-node_js:
-  - '6.14.3'
-
-before_install:
-  - export CHROME_BIN=chromium-browser
-  - npm i -g npm@^3.0.0
-  - npm install
+language: nodejs
 
 before_script:
-  - npm prune
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - npm run setup
 
 script:
   - npm run ci
+
+after_success:
+  - npm run typedoc
+  - npm pack
