--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A simple Webpack 4 starter with TypeScript transpilation",
   "main": "index.js",
   "scripts": {
+    "setup": "npm install",
     "start": "webpack-dev-server --config webpack.config.js --open",
     "build": "webpack --config webpack.config.js --mode production",
     "build:prod": "webpack --config webpack-prod.config.js -p",
     "test": "karma start karma.config.js",
     "test:prod": "karma start karma-prod.config.js",
+    "typedoc": "typedoc --out docs --mode modules --tsconfig tsconfig.json src/",
     "ci": "npm run build:prod && npm run test:prod"
   },
   "keywords": [
@@ -39,11 +41,14 @@
     "karma-jasmine-html-reporter": "1.4.0",
     "karma-webpack": "3.0.5",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "7.1.0",
+    "shx": "^0.3.2",
     "source-map-loader": "0.2.4",
     "style-loader": "^0.23.1",
     "tslint": "5.10.0",
     "tslint-loader": "3.6.0",
+    "typedoc": "^0.14.2",
     "typescript": "3.3.3",
     "url-loader": "1.1.2",
     "webpack": "^4.29.3",
