--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "2.8.7",
+    "@types/jquery": "^3.3.29",
     "@types/node": "7.0.0",
     "@types/pubsub-js": "^1.5.18",
     "awesome-typescript-loader": "5.2.0",
@@ -35,6 +36,7 @@
     "css-loader": "2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "3.3.0",
+    "jasmine-dom-custom-matchers": "^1.0.5",
     "karma": "4.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "2.0.1",
@@ -56,7 +58,8 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
-    "jquery": "3.3.1",
-    "pubsub-js": "1.7.0"
+    "jquery": "^3.3.1",
+    "pubsub-js": "1.7.0",
+    "uuid": "^3.3.2"
   }
 }
