--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "2.8.7",
+    "@types/jquery": "^3.3.29",
     "@types/node": "7.0.0",
     "@types/pubsub-js": "^1.5.18",
     "awesome-typescript-loader": "5.2.0",
@@ -56,7 +57,8 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
-    "jquery": "3.3.1",
-    "pubsub-js": "1.7.0"
+    "jquery": "^3.3.1",
+    "pubsub-js": "1.7.0",
+    "uuid": "^3.3.2"
   }
 }
