--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "setup": "npm install",
-    "start":"concurrently npm:start:server npm:start:client",
+    "stop": "taskkill /f /im node.exe",
+    "start": "concurrently npm:start:server npm:start:client",
     "start:client": "webpack-dev-server --config webpack.config.js --open",
     "build": "webpack --config webpack.config.js --mode production",
     "build:prod": "webpack --config webpack-prod.config.js -p",
@@ -64,6 +65,7 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "pubsub-js": "1.7.0",
